# test_task

./: CMakeLists.txt  README.md  task.cpp  test0.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  tests.cpp
